maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:76: error: expected class or object definition
def indicationCaseDepart():Boolean = {
^JediEscaper:84: error: expected class or object definition
def indicationCasesAdjacentes(n:Int, posX:Int, posY:Int) = {
^JediEscaper:106: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:107: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:108: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:109: error: Unmatched closing brace '}' ignored here
}
^